--- a/GoinPostal/GoinPostal.csproj
+++ b/GoinPostal/GoinPostal.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="delstat.cs" />
+    <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="row.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
