--- a/GoinPostal.csproj
+++ b/GoinPostal.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard1.4</TargetFramework>
     <ApplicationIcon />
     <OutputType>Exe</OutputType>
-    <StartupObject></StartupObject>
+    <StartupObject>GoinPostal.Program</StartupObject>
   </PropertyGroup>
 
 </Project>
