--- a/GoinPostal.csproj
+++ b/GoinPostal.csproj
@@ -7,4 +7,8 @@
     <StartupObject>GoinPostal.Program</StartupObject>
   </PropertyGroup>
 
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="/t:Restore" />
+  </Target>
+
 </Project>
